<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.GmsCoreCronetProvider</string>
    <string name="add_to_home_screen">Add to Home screen</string>
    <string name="add_to_read_later">Save for later</string>
    <string name="allow_strict_mode">Allow Strict Mode</string>
    <string name="allow_strict_mode_key">allowStrictMode</string>
    <string name="also_show_standalone_weather">Also show standalone weather card</string>
    <string name="also_show_standalone_weather_key">alsoShowStandaloneWeather</string>
    <string name="always_show_google_sold_ads_key">alwaysShowGoogleSoldAds</string>
    <string name="always_show_purchase_success_key">alwaysShowPurchaseSuccess</string>
    <string name="always_show_purchase_success_title">Always show purchase success flow</string>
    <string name="always_show_static_onboarding">Always show static onboarding</string>
    <string name="always_show_static_onboarding_key">alwaysShowStaticOnboarding</string>
    <string name="archive_issue">Archive</string>
    <string name="auto_pin_magazines">Auto-download magazines</string>
    <string name="auto_pin_magazines_description">Automatically download issues as they arrive</string>
    <string name="auto_pin_magazines_preference_key">autoPinMagazines</string>
    <string name="auto_pin_settings">Options for auto-downloaded issues</string>
    <string name="auto_pin_settings_preference_key">autoPinSettings</string>
    <string name="auto_play_videos">Autoplay videos</string>
    <string name="auto_play_videos_preference_key">autoPlayVideo</string>
    <string name="blacklist_editor_preference_key">blacklistEditor</string>
    <string name="blacklist_editor_title">Hidden in For you</string>
    <string name="browser_custom_tabs_preference_key">browserCustomTabs</string>
    <string name="clear_all_downloads">Clear all downloads</string>
    <string name="clear_all_downloads_preference_key">clearAllDownloads</string>
    <string name="compact_cards_preference_key">compactCards</string>
    <string name="countdown_days">days</string>
    <string name="countdown_hours">hours</string>
    <string name="countdown_mins">mins</string>
    <string name="countdown_secs">secs</string>
    <string name="country_override_key">countryOverride</string>
    <string name="country_override_summary">Country code, e.g. US</string>
    <string name="country_override_title">Country override</string>
    <string name="custom_base_url_key">customBaseUrl</string>
    <string name="custom_base_url_summary">e.g. https://play.google.com/newsstand</string>
    <string name="custom_base_url_title">Custom base URL</string>
    <string name="custom_guc_url_key">customGucUrl</string>
    <string name="custom_guc_url_summary">e.g. https://newsstand.googleusercontent.com/newsstand</string>
    <string name="custom_guc_url_title">Custom GUC URL</string>
    <string name="custom_tabs">Open web pages in Google News</string>
    <string name="custom_tabs_summary">Let the Google News browser open web links</string>
    <string name="custom_url_params_key">customUrlParams</string>
    <string name="custom_url_params_summary">Ampersand-separated params to be appended to all requests, e.g. foo=true&amp;bar=1</string>
    <string name="custom_url_params_title">Custom URL params</string>
    <string name="data_saver_mode">Data Saver mode</string>
    <string name="data_saver_mode_preference_key">dataSaverMode</string>
    <string name="debug_pref_briefing_title">Briefing</string>
    <string name="debug_pref_upgrade_title">Upgrade</string>
    <string name="default_environment">prod</string>
    <string name="disable_ads">Disable Ads</string>
    <string name="disable_ads_key">disableAds</string>
    <string name="download_content">Download</string>
    <string name="download_via_wifi_only">Download via Wi-Fi only</string>
    <string name="download_via_wifi_only_description">"To reduce carrier data charges, don't download over mobile networks"</string>
    <string name="download_via_wifi_only_preference_key">downloadViaWifiOnly</string>
    <string name="download_while_charging_only">Download while charging only</string>
    <string name="download_while_charging_only_description">To reduce battery usage, download only when charging</string>
    <string name="download_while_charging_only_preference_key">downloadWhileChargingOnly</string>
    <string name="downloading_capitalized">DOWNLOADING</string>
    <string name="downloading_category_key">downloadingCategory</string>
    <string name="edition_override_preference_key">editionOverride</string>
    <string name="edition_type_story_360">Full coverage</string>
    <string name="enable_all_debug_loggers">Enable all debug loggers</string>
    <string name="enable_all_debug_loggers_key">enableAllDebugLoggers</string>
    <string name="enable_debug_info_card">Enable debug info card</string>
    <string name="enable_debug_info_card_key">enableDebugInfoCard</string>
    <string name="enable_test_midrolls">Enable test midrolls</string>
    <string name="enable_test_midrolls_key">enableTestMidrolls</string>
    <string name="enable_widget_debug_timestamp">Enable widget debug timestamp</string>
    <string name="enable_widget_debug_timestamp_key">enableWidgetDebugTimestamp</string>
    <string name="fcs_merge_label_override_key">fcsMergeLabelOverride</string>
    <string name="fcs_merge_label_override_title">FCS merge label override</string>
    <string name="for_you_mixer_override">Mixer Override</string>
    <string name="for_you_mixer_override_key">n2MixerOverride</string>
    <string name="for_you_pinned">Download \"For You\"</string>
    <string name="for_you_pinned_preference_key">forYouPinned</string>
    <string name="for_you_pinned_summary">Keep \"For You\" content downloaded for offline reading</string>
    <string name="force_autoplay_videos">Force autoplay videos</string>
    <string name="force_autoplay_videos_key">forceAutoplayVideos</string>
    <string name="force_low_ram_device">Force low ram device</string>
    <string name="force_low_ram_device_key">forceLowRamDevice</string>
    <string name="force_native_ads_in_articles">Always show native app install ads in articles</string>
    <string name="force_native_ads_in_articles_key">forceNativeAdsInArticles</string>
    <string name="general_capitalized">GENERAL</string>
    <string name="general_preference_category_key">generalCategory</string>
    <string name="help">Help</string>
    <string name="ignore_overlay_throttling_key">ignoreOverlayThrottling</string>
    <string name="ignore_user_education_throttling">Ignore Warm Welcome card throttling</string>
    <string name="image_sync_type_key">imageSyncType</string>
    <string name="image_sync_type_title">Image sync</string>
    <string name="internal_ads_title">Ads</string>
    <string name="internal_article_feedback_title">Dogfood feedback</string>
    <string name="internal_debugging_title">Debugging</string>
    <string name="internal_environment_key">environment</string>
    <string name="internal_environment_title">Environment</string>
    <string name="internal_options_sync_title">Sync</string>
    <string name="internal_options_title">Internal options</string>
    <string name="internal_user_state_title">User state</string>
    <string name="lat_long_override_key">latLongOverride</string>
    <string name="lat_long_override_summary">Lat,Long e.g. 42.363,-71.09</string>
    <string name="lat_long_override_title">Lat/Long override</string>
    <string name="load_extra_js_key">loadExtraJs</string>
    <string name="load_extra_js_summary">URL of extra JavaScript to load into WebViews, e.g. http://debug.phonegap.com/target/target-script-min.js#UNIQUE-IDENTIFIER</string>
    <string name="load_extra_js_title">Load extra JavaScript</string>
    <string name="min_sync_space_mags">Min. space to sync mags (MB)</string>
    <string name="min_sync_space_news">Min. space to sync news (MB)</string>
    <string name="mini_cards">Mini cards</string>
    <string name="move_to_bottom">Move to end</string>
    <string name="move_to_top">Move to beginning</string>
    <string name="my_activity">My activity</string>
    <string name="my_activity_preference_key">myActivity</string>
    <string name="notifications_category_key">notificationsCategory</string>
    <string name="notifications_screen_key">notificationsScreen</string>
    <string name="notifications_settings_menu_title">Notifications</string>
    <string name="pinned_edition_sizes_key">pinnedEditionSizes</string>
    <string name="pinned_edition_sizes_title">Share pinned edition sizes</string>
    <string name="pixel_tracking_enabled_key">pixelTrackingEnabled</string>
    <string name="pixel_tracking_enabled_title">Enable Pixel Tracking</string>
    <string name="read_issue">Read issue</string>
    <string name="reading_position_sync_preference_key">readingPositionSync</string>
    <string name="related_videos_mixer_override">Related Videos Mixer Override</string>
    <string name="related_videos_mixer_override_key">n2RelatedVideosMixerOverride</string>
    <string name="remove_from_read_later">Remove from saved stories</string>
    <string name="reset_auto_enabled_sync">Reset auto-enabled sync flag</string>
    <string name="reset_auto_enabled_sync_key">resetAutoEnabledSync</string>
    <string name="reset_auto_enabled_sync_summary">"Will also reset the flag for user's first launch."</string>
    <string name="reset_warm_welcome_cards">Reset warm welcome cards</string>
    <string name="reset_warm_welcome_cards_key">resetWarmWelcomeCards</string>
    <string name="see_original_article">View original web page</string>
    <string name="server_type_key">serverType</string>
    <string name="server_type_title">Server</string>
    <string name="settings_preferred_language_region">Preferred language &amp; region</string>
    <string name="share">Share</string>
    <string name="show_ad_trace_info_key">showAdTraceInfo</string>
    <string name="show_ad_trace_info_title">Show trace info for ads</string>
    <string name="simulate_crash_event">Cause a crash event</string>
    <string name="simulate_crash_event_key">simulateCrashEvent</string>
    <string name="staging_guc_url">https://staging-newsstand-sandbox.googleusercontent.com/newsstand</string>
    <string name="start_background_sync">Start background sync</string>
    <string name="start_background_sync_key">startBackgroundSync</string>
    <string name="static_onboarding_delay">Force static onboarding delay (9 seconds)</string>
    <string name="static_onboarding_delay_key">staticOnboardingDelay</string>
    <string name="store_content_on_sd_card">Store content on SD card</string>
    <string name="sync_info_key">syncInfoKey</string>
    <string name="sync_info_title">Sync info</string>
    <string name="sync_minimum_storage_mags_key">syncMinimumStorageMags</string>
    <string name="sync_minimum_storage_news_key">syncMinimumStorageNews</string>
    <string name="temperature_unit_preference_key">temperatureUnit</string>
    <string name="temperature_units">Temperature units</string>
    <string name="test_briefing_key">testBriefing</string>
    <string name="test_briefing_title">Test briefing notification</string>
    <string name="test_upgrade_key">testUpgrade</string>
    <string name="test_upgrade_notification">Test upgrade notification</string>
    <string name="tester_options_capitalized">Tester options</string>
    <string name="tester_preference_key">tester</string>
    <string name="translate">Translate</string>
    <string name="unarchive_issue">Remove from archive</string>
    <string name="undo_translation">Undo translation</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="use_external_storage_preference_key">useExternalStorage</string>
    <string name="web_view_debugging">Enable WebView debugging</string>
    <string name="web_view_debugging_key">webViewDebugging</string>
</resources>