<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/tester_options_capitalized" android:key="@string/tester_preference_key">
        <SwitchPreference android:title="@string/always_show_purchase_success_title" android:key="@string/always_show_purchase_success_key" />
        <SwitchPreference android:title="@string/ignore_user_education_throttling" android:key="@string/ignore_overlay_throttling_key" />
        <SwitchPreference android:title="@string/pixel_tracking_enabled_title" android:key="@string/pixel_tracking_enabled_key" />
        <SwitchPreference android:title="@string/allow_strict_mode" android:key="@string/allow_strict_mode_key" />
    </PreferenceCategory>
</PreferenceScreen>