<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/quantum_ic_launch_grey600_24" android:id="@id/go_to_issue" android:visible="false" android:title="@string/read_issue" />
    <item android:icon="@drawable/quantum_ic_launch_grey600_24" android:id="@id/go_to_edition" android:visible="false" />
    <item android:icon="@drawable/quantum_ic_unarchive_grey600_24" android:id="@id/menu_unarchive_issue" android:visible="false" android:title="@string/unarchive_issue" />
    <item android:icon="@drawable/quantum_ic_archive_grey600_24" android:id="@id/menu_archive_issue" android:visible="false" android:title="@string/archive_issue" />
    <item android:icon="@drawable/quantum_ic_vertical_align_top_grey600_24" android:id="@id/menu_move_to_top" android:visible="false" android:title="@string/move_to_top" />
    <item android:icon="@drawable/quantum_ic_vertical_align_bottom_grey600_24" android:id="@id/menu_move_to_bottom" android:visible="false" android:title="@string/move_to_bottom" />
    <item android:icon="@drawable/subscribe_icon_subscribed_state" android:id="@id/menu_unsubscribe" android:visible="false" android:title="@string/unsubscribe" />
    <item android:icon="@drawable/quantum_ic_add_to_home_screen_grey600_24" android:id="@id/menu_add_to_home_screen" android:visible="false" android:title="@string/add_to_home_screen" />
    <item android:icon="@drawable/quantum_ic_get_app_grey600_24" android:id="@id/menu_toggle_download" android:visible="false" android:title="@string/download_content" />
</menu>