<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ns="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/s360_icon_padded" android:id="@id/menu_story_pivots" android:visible="false" android:orderInCategory="1" android:title="@string/edition_type_story_360" ns:showAsAction="always" />
    <item android:icon="@drawable/quantum_ic_share_grey600_24" android:id="@id/menu_share" android:visible="false" android:orderInCategory="2" android:title="@string/share" ns:showAsAction="ifRoom" />
    <item android:icon="@drawable/quantum_ic_bookmark_border_vd_theme_24" android:id="@id/menu_save" android:visible="false" android:orderInCategory="3" android:title="@string/add_to_read_later" ns:showAsAction="never" />
    <item android:icon="@drawable/quantum_ic_bookmark_vd_theme_24" android:id="@id/menu_unsave" android:visible="false" android:orderInCategory="4" android:title="@string/remove_from_read_later" ns:showAsAction="never" />
    <item android:id="@id/menu_magazine_alt_formats" android:visible="false" android:orderInCategory="5" ns:showAsAction="ifRoom" />
    <item android:id="@id/menu_see_original_article" android:visible="false" android:orderInCategory="6" android:title="@string/see_original_article" ns:showAsAction="never" />
    <item android:id="@id/menu_see_original_edition" android:visible="false" android:orderInCategory="7" ns:showAsAction="never" />
    <item android:id="@id/menu_translate" android:visible="false" android:orderInCategory="8" android:title="@string/translate" ns:showAsAction="never" />
    <item android:id="@id/menu_undo_translate" android:visible="false" android:orderInCategory="9" android:title="@string/undo_translation" ns:showAsAction="never" />
    <item android:id="@id/menu_article_content_feedback" android:visible="false" android:orderInCategory="10" android:title="@string/internal_article_feedback_title" ns:showAsAction="never" />
    <item android:id="@id/menu_amp_help_article" android:visible="false" android:orderInCategory="11" android:title="@string/help" ns:showAsAction="never" />
</menu>