<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:id="@id/days" style="@style/CountDownNumber" />
        <TextView android:id="@id/days_label" android:text="@string/countdown_days" style="@style/CountDownLetter" />
    </LinearLayout>
    <TextView android:text=":" style="@style/CountDownSeparator" />
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:id="@id/hours" style="@style/CountDownNumber" />
        <TextView android:id="@id/hours_label" android:text="@string/countdown_hours" style="@style/CountDownLetter" />
    </LinearLayout>
    <TextView android:text=":" style="@style/CountDownSeparator" />
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:id="@id/minutes" style="@style/CountDownNumber" />
        <TextView android:id="@id/minutes_label" android:text="@string/countdown_mins" style="@style/CountDownLetter" />
    </LinearLayout>
    <TextView android:text=":" style="@style/CountDownSeparator" />
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:id="@id/seconds" style="@style/CountDownNumber" />
        <TextView android:id="@id/seconds_label" android:text="@string/countdown_secs" style="@style/CountDownLetter" />
    </LinearLayout>
</merge>